# groq-mcp

./: README.md  pyproject.toml
examples/: example_groq_mcp.py
src/: mitosis.py
src/oarc_groq_mcp/: __init__.py  groq_vscode_mcp.py  vscode_mcp.py
vscode_mcp_groq.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
