[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-mcp-groq"
version = "0.1.0"
description = "MCP server integration for VS Code's Copilot agent with Groq LLM support"
readme = "README.md"
authors = [
    {name = "Leo Borcherding", email = "leoleojames1@gmail.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vscode", "mcp", "copilot", "groq", "llm", "ai"]
dependencies = [
    "fastmcp>=0.1.0",
    "groq>=0.4.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/vscode-mcp-groq"
"Bug Tracker" = "https://github.com/yourusername/vscode-mcp-groq/issues"

[project.scripts]
vscode-mcp = "oarc_groq_mcp:cli"
vscode-mcp-groq = "oarc_groq_mcp:cli"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"